CHANGES
=======

0.5 (11-30-2012)
----------------

- Use jinja2 for templates

- Added `layout_data` request property

- Allow to pass several messages to `error` message


0.4 (11-12-2012)
----------------

- Added `player.layout` renderer

- Added `-c` argument to `player` console script, 
  it allows to customize templates

- `set_layout_data` accepts keyword arguments

- Removed `player.wrap_layout()`

- Removed python2.6 support


0.3 (11-07-2012)
----------------

- Added `set_layout_data` request method, allow to set global layout options

- Added status messages

- Added formatters


0.2 (11-01-2012)
----------------

- Added `layout` subsystem


0.1 (10-30-2012)
----------------

- Initial release